1.2.1  (CURRENT DEV RELEASE)
- Added public method 'getData' that returns the value of a named config option.
- Added public method 'clear' that clears all calendar events from the calendar.
- Updated scroll to hour to delay to fix a timing issue
- Added eventDrag callback
- Added support for 24 hour timeslot display as an alternative to AM / PM 12 hour day. (thanks dozebox!)
- Added eventAfterRender callback
- Added support for weeks starting on any day of the week (thanks Bramus!)

**Thanks to everyone who logged issues and made suggestions in this release. 


2009-06-19 - 1.2 
- Added better layout support for overlapping of events
- Added ability to supply formatters for date and time
- Added improved demo with creation / editing of events using jquery ui.
- Added option to only display hours defined in the 'businessHours' config option.
- Migrated code base to extend jquery-ui widget.
- Improved inline method documentation.
- Added 'readonly' config option to flag the entire calendar as readonly, preventing creation, dragging, dropping and resizing of events.
- Added ability to configure day, month names for better i18n support
- Fixed bug with IE7 resizing once an event gets to 2 timeslots or smaller

 
2009-06-08 - 1.1.3
- Removed console.log that was causing issues in IE.
- Fixed an issue with nav buttons in certain environments


2009-05-21 - 1.1.2
- Fixed problem in safari and chrome where new events where not being created due to lack of event bubbling of mousedown and mouseup events.

2009-05-17- 1.1.1
- Fixed problem with calculation of end date passed to data functions / url
- Updating scrolling to hour to only occur on first render
- Added code to check for changed options after loading data before actually re-rendering the calendar.


2009-05-16 - 1.1
- Extended the events data structure to allow options to be passed back to the calendar with event data. This has 